--- a/public/dashboard/barangKeluar.html
+++ b/public/dashboard/barangKeluar.html
@@ -11,6 +11,7 @@
   <title>Barang keluar</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../../src/pagination.css">
 <!--  -->
   <style type="text/tailwindcss">
     @layer utilities {
@@ -376,63 +377,63 @@ body{
         <input type="text" name="text" placeholder="Search" class="placeholder-white text-white items-center bg-opacity-25 max-w-md w-80 bg-slate-100 rounded-md px-10 h-10 text-xs font-semibold focus:border-ungu1 focus:outline-none " required>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/dash.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/gudang.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Gudang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/satuan.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Satuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/data.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Kategori Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/checklist.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pengajuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../peminjaman/peminjaman-hari-ini.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/borrow.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pinjam Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/list.png" alt="" class="w-5 h-5
              ml-7 mr-2">
             <span class="">Laporan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/user.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Profile</span>
           </a>
         </li>
         <li>
-          <a href="login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
+          <a href="../login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
             <img src="../../img/logout.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Log Out</span>
@@ -456,63 +457,63 @@ body{
       <div class="flex-col bg-ungu1 w-52 mt-[68px]" >
         <ul class="flex-col">
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/dash.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Dashboard</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/gudang.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Gudang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/satuan.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Satuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/data.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Kategori Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/checklist.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pengajuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../peminjaman/peminjaman-hari-ini.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/borrow.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pinjam Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/list.png" alt="" class="w-5 h-5
                ml-7 mr-2">
               <span class="">Laporan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/user.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Profile</span>
             </a>
           </li>
           <li>
-            <a href="login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/logout.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Log Out</span>
@@ -535,7 +536,7 @@ body{
       <div class="flex-col">
         <div class="title-table W-[500px] p-96" id="title-1">
           <div class="brand">
-            <a href="#">
+            <a href="dash.html">
               <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
             </a>
             <p class="font-semibold capitalize">barang keluar</p>
@@ -568,9 +569,13 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -609,9 +614,13 @@ body{
           </table>
 
           <div class="table-footer ml-[100px]">
-            <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
-            <input type="text" name="" class="field" value="1" disabled>
-            <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
         </div>
         </div>
       </div>
