--- a/public/kategori/pakaian.html
+++ b/public/kategori/pakaian.html
@@ -10,6 +10,7 @@
   <!-- End G-Font -->
   <title>Pakaian</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="../../src/pagination.css">
   <script src="https://cdn.tailwindcss.com"></script>
 <!--  -->
   <style type="text/tailwindcss">
@@ -409,63 +410,63 @@ body{
         <input type="text" name="text" placeholder="Search" class="placeholder-white text-white items-center bg-opacity-25 max-w-md w-80 bg-slate-100 rounded-md px-10 h-10 text-xs font-semibold focus:border-ungu1 focus:outline-none " required>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/dash.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/gudang.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Gudang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/satuan.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Satuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/data.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Kategori Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/checklist.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pengajuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../peminjaman/peminjaman-hari-ini.php" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/borrow.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pinjam Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/list.png" alt="" class="w-5 h-5
              ml-7 mr-2">
             <span class="">Laporan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/user.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Profile</span>
           </a>
         </li>
         <li>
-          <a href="login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
+          <a href="../login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
             <img src="../../img/logout.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Log Out</span>
@@ -489,63 +490,63 @@ body{
       <div class="flex-col bg-ungu1 w-52 mt-[68px]" >
         <ul class="flex-col">
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/dash.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Dashboard</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/gudang.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Gudang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/satuan.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Satuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/data.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Kategori Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/checklist.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pengajuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../peminjaman/peminjaman-hari-ini.php" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/borrow.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pinjam Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/list.png" alt="" class="w-5 h-5
                ml-7 mr-2">
               <span class="">Laporan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/user.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Profile</span>
             </a>
           </li>
           <li>
-            <a href="login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../img/logout.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Log Out</span>
@@ -615,9 +616,13 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
           </div>
         </div>
     </div>
@@ -672,9 +677,13 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next"><span>Next</span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
           </div>
         </div>
       </div>
