--- a/public/kategori/ubah-kategori.html
+++ b/public/kategori/ubah-kategori.html
@@ -363,63 +363,63 @@
         <input type="text" name="text" placeholder="Search" class="placeholder-white text-white items-center bg-opacity-25 max-w-md w-80 bg-slate-100 rounded-md px-10 h-10 text-xs font-semibold focus:border-ungu1 focus:outline-none " required>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/dash.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/gudang.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Gudang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/satuan.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Satuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/data.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Kategori Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/checklist.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pengajuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../peminjaman/peminjaman-hari-ini.php" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/borrow.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pinjam Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/list.png" alt="" class="w-5 h-5
              ml-7 mr-2">
             <span class="">Laporan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/user.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Profile</span>
           </a>
         </li>
         <li>
-          <a href="login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
+          <a href="../login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
             <img src="../../img/logout.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Log Out</span>
@@ -457,35 +457,35 @@
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
+            <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
               <img src="../../img/satuan.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Satuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
+            <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
               <img src="../../img/data.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Kategori Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
+            <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
               <img src="../../img/checklist.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pengajuan Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
+            <a href="../peminjaman/peminjaman-hari-ini.php" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200">
               <img src="../../img/borrow.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Pinjam Barang</span>
             </a>
           </li>
           <li>
-            <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200">
+            <a href="../kategori/kategori-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200">
               <img src="../../img/list.png" alt="" class="w-5 h-5
                ml-7 mr-2">
               <span class="">Laporan Barang</span>
@@ -499,7 +499,7 @@
             </a>
           </li>
           <li>
-            <a class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="logout">
+            <a href="../login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="logout">
               <img src="../../img/logout.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span id="logout" class="">Log Out</span>
@@ -548,8 +548,8 @@
               <hr class="-ml-[31px] sm:-ml-[132px] md:-ml-[4px] lg:-ml-[4px] h-0.5 w-[416px] sm:w-[617px] md:w-[745px] lg:w-[1000px] xl:w-[1102px] mt-[30px] md:mt-[40px] bg-slate-400">
 
               <div class="btn flex sm:-ml-[50px] md:ml-[175px] xl:ml-[360px] mt-[15px] sm:mt-[30px] md:mt-[35px] xl:mt-[45px]">
-                  <button type="submit" class="rounded-lg px-12 py-2 font-semibold bg-white hover:bg-opacity-80 text-slate-400 transition duration-300 border border-slate-400 hover:bg-ungu1 hover:text-white">Batal</button>
-                  <button type="submit" class="rounded-lg ml-[30px] px-12 py-2 font-semibold bg-ungu1 hover:bg-opacity-80 text-white transition duration-300 hover:border hover:border-slate-400 hover:bg-white hover:text-slate-400">Ubah</button>
+                  <a href="../kategori/kategori-barang.html" type="submit" class="rounded-lg px-12 py-2 font-semibold bg-white hover:bg-opacity-80 text-slate-400 transition duration-300 border border-slate-400 hover:bg-ungu1 hover:text-white">Batal</a>
+                  <a href="../kategori/kategori-barang.html" type="submit" class="rounded-lg ml-[30px] px-12 py-2 font-semibold bg-ungu1 hover:bg-opacity-80 text-white transition duration-300 hover:border hover:border-slate-400 hover:bg-white hover:text-slate-400">Ubah</a>
               </div>
           </div>
             
