--- a/public/kategori/alat_tulis.html
+++ b/public/kategori/alat_tulis.html
@@ -11,6 +11,7 @@
   <title>Alat Tulis</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../../src/pagination.css">
 <!--  -->
   <style type="text/tailwindcss">
     @layer utilities {
@@ -86,8 +87,8 @@ body{
 .title-table > .input-field input:focus{
   outline: none;
 }
-.title-table > .input-field > button{
-  height: 2.1rem;
+.title-table > .input-field > a{
+  padding: 10px;
   border-radius: 5px;
   border: none;
   background-color: #7B2A8C;
@@ -284,11 +285,11 @@ body{
   }
 }
 @media screen and (max-width: 520px){
-  .title-table > .input-field > input, .title-table > .input-field > button{
+  .title-table > .input-field > input, .title-table > .input-field > a{
     width: 100%;
     margin-left: -.5rem;
   }
-  .title-table > .input-field > button{
+  .title-table > .input-field > a{
     margin-top: .5rem;
   }
   .container-table{
@@ -370,7 +371,6 @@ body{
 <body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter" onload="onload()">
 
     <!-- NAV -->
-    <!-- NAV -->
     <div class="navbar fixed flex justify-between p-5 bg-gradient-to-r from-ungu1 to-ungu2 w-100% mr-0 z-10">
       <div class="text-left font-bold items-center ">
         <a href="">
@@ -392,11 +392,11 @@ body{
     </div>
 
     <!-- HAMBURGER -->
-    <button id="hamburger" class="fixed m-[16px] text-white inline-flex items-center justify-center focus:border h-10 w-10 rounded-md outline-none focus:outline-none lg:hidden z-10">
+    <a id="hamburger" class="fixed m-[16px] text-white inline-flex items-center justify-center focus:border h-10 w-10 rounded-md outline-none focus:outline-none lg:hidden z-10">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
       </svg>
-    </button>
+    </a>
     <nav id="nav-menu" class="nav-input bg-ungu1 mt-[68px] h-[530px] sm:h-[488px] md:h-[432px] -mr-20 hidden lg:hidden fixed transition duration-1000 rounded-b-md z-50">
       <ul class="w-[350px]">
         <li class="ml-[13px] py-2 md:hidden">
@@ -406,63 +406,63 @@ body{
         <input type="text" name="text" placeholder="Search" class="placeholder-white text-white items-center bg-opacity-25 max-w-md w-80 bg-slate-100 rounded-md px-10 h-10 text-xs font-semibold focus:border-ungu1 focus:outline-none " required>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../dashboard/dash.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/dash.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../gudang/gudang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/gudang.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Gudang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../satuan/satuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/satuan.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Satuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../kategori/kategori-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/data.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Kategori Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../pengajuan/pengajuan-barang.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/checklist.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pengajuan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../peminjaman/peminjaman-hari-ini.php" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/borrow.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Pinjam Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../laporan/laporan-barang.html" class="side -ml-[2px] flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/list.png" alt="" class="w-5 h-5
              ml-7 mr-2">
             <span class="">Laporan Barang</span>
           </a>
         </li>
         <li>
-          <a href="" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+          <a href="../profile/profile.html" class="side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
             <img src="../../img/user.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Profile</span>
           </a>
         </li>
         <li>
-          <a href="login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
+          <a href="../login.html" class=" side flex text-white py-3 hover:bg-ungu2 hover:rounded-b-md transition duration-200" id="sidebar">
             <img src="../../img/logout.png" alt="" class="w-4 h-4
              ml-7 mr-2">
             <span class="">Log Out</span>
@@ -542,7 +542,7 @@ body{
             </a>
           </li>
           <li>
-            <a href="login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
+            <a href="../login.html" class="mt-[143px] side flex text-white py-3 hover:bg-ungu2 transition duration-200" id="sidebar">
               <img src="../../img/logout.png" alt="" class="w-4 h-4
                ml-7 mr-2">
               <span class="">Log Out</span>
@@ -566,7 +566,7 @@ body{
           </div>
           <div class="input-field">
             <input type="text" name="" value="" placeholder="Cari Barang">
-            <button type="submit" name="button">tambah barang</button>
+            <a href="tambah-kategori.html" type="submit" name="a">tambah barang</a>
           </div>
         </div>
         <!-- end of title table -->
@@ -612,9 +612,13 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><span><img src="../../img/icons/back.png" alt="Previos"></span> Previous</button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -629,7 +633,7 @@ body{
           </div>
           <div class="input-field">
             <input type="text" name="" value="" placeholder="Cari Barang">
-            <button type="submit" name="button" class="btn">tambah barang</button>
+            <a type="submit" name="a" class="btn">tambah barang</a>
           </div>
         </div>
         <!-- end of title table -->
@@ -669,9 +673,13 @@ body{
           </table>
 
           <div class="table-footer">
-              <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
-              <input type="text" name="" class="field" value="1" disabled>
-              <button type="button" name="button" class="next"><span>Next</span><img src="../../img/icons/next.png" alt="Next"></button>
+            <ul class="pagination pagination-primary">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
           </div>
         </div>
     </div>
