--- a/public/laporan/laporan-barang.html
+++ b/public/laporan/laporan-barang.html
@@ -323,7 +323,7 @@
         </div>
       </div>
       <div class="profile">
-        <a href="profile.html" class="flex"><h3 class="text-white font-semibold pr-3 pt-1">NoFace21</h3> 
+        <a href="profile.html" class="flex"><h3 class="text-white font-semibold pr-3 pt-1">@NoFace21</h3> 
         <img src="../../img/noface.jpg" alt="profile" class="w-7 h-7 rounded-full border"></a>
       </div>
       <div class="absolute px-48 box-border lg:mx-[1px] -my-[7px] hidden md:block">
